plugins {
    id 'java'
    id 'application'
}

group = 'com.example'
version = '1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

dependencies {
    implementation 'com.github.LowLevelSubmarine:GeniusLyricsAPI:1.0.3'
    implementation 'org.json:json:20210307'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'

    implementation 'org.openjfx:javafx-base:23.0.1:win'
    implementation 'org.openjfx:javafx-controls:23.0.1:win'
    implementation 'org.openjfx:javafx-graphics:23.0.1:win'
    implementation 'org.openjfx:javafx-media:23.0.1:win'
    implementation 'org.openjfx:javafx-fxml:23.0.1:win'

    //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    //testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    //testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'

    
}

application {
    mainClass = 'translation_machine.TranslationMachineUI'
}

test {
    useJUnitPlatform();
}

run {
    // Tell Gradle where JavaFX modules are
    jvmArgs = [
        '--module-path', classpath.asPath,
        '--add-modules', 'javafx.controls,javafx.fxml,javafx.media'
    ]
}

/* application {
    mainClass = "translation_machine.TranslationMachineUI"
}

run {
    jvmArgs = [
        '--add-modules', 'javafx.controls,javafx.graphics'
    ]
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        '--enable-preview',
        '-Xlint:deprecation'
    ]
    options.encoding = 'UTF-8'
}

    //options.fork = true


test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(23)
    }
} */